# vecna

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
src/vecna/: __init__.py  agent.py  cli.py  ui.py  utils.py
src/vecna/prompts/: __init__.py  system.py
src/vecna/tools/: __init__.py  base.py  echo.py  exceptions.py  file_read.py  registry.py  utils.py
tests/: test_tools.py
